[package]
name = "launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
keyring = { version = "3.6.2", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
minecraft-msa-auth = "0.4.0"
oauth2 = { version = "5.0.0", default-features = false, features = [
    "reqwest",
    "rustls-tls",
] }
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json",
    "blocking",
] }
webbrowser = "1.0.4"
tokio = { version = "1.45.0", features = ["full"] }
downloader_mc = "0.1.0"
pbr = "1.1.1"
